--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "prepare": "husky"
+    "prepare": "husky && husky install"
   },
   "dependencies": {
     "next": "15.0.0",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/node": "24.3.3",
     "@types/react": "19.1.13",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "typescript": "5.3.2"
   }
 }
