--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "antd": "^5.27.4",
     "next": "15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
