--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "antd": "^5.0.0",
-    "lodash.debounce": "^4.0.8",
+    "antd": "^5.27.4",
     "date-fns": "^2.30.0",
-    "isomorphic-unfetch": "^3.1.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "lodash.debounce": "^4.0.8",
+    "next": "14.0.0",
+    "rc-input": "^1.8.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "24.5.2",
+    "@types/react": "19.1.13",
+    "typescript": "5.9.2"
   }
 }
